--- a/src/app/v2/screens/main-screen/main-screen.component.scss
+++ b/src/app/v2/screens/main-screen/main-screen.component.scss
@@ -28,6 +28,25 @@ app-pull-tab ::ng-deep {
                 background: rgba(#e0e0e0, 0.7);
             }
         }
+
+        &--wrapper {
+            transition: all .3s ease;
+            position: absolute;
+            width: 100%;
+            top: 0;
+
+            &.inactive {
+                opacity: 0;
+                transition-delay: 0.3s;
+                transform: translateY(20px);
+            }
+
+            &.active {
+                opacity: 1;
+                transition-delay: 0.3s;
+                transform: translateY(0px);
+            }
+        }
     }
 }
 
